# magnatite

./: Cargo.toml  LICENSE  README.md
src/: database.rs  error.rs  errors.rs  interpreter.rs  main.rs  routes.rs  test_queries.sql
src/database/: cell.rs  column.rs  database.rs  mod.rs  record.rs  request.rs  table.rs
