[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["form"] }
bitflags = "2.5.0"
serde = { version = "1.0.198", features = ["derive"] }
sqlparser = "0.45.0"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["serde"] }
